--- a/trunk/ddscanner/app/src/main/res/layout/fragment_need_to_login.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_need_to_login.xml
@@ -4,7 +4,8 @@
     android:id="@+id/need_to_login"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_centerInParent="true">
+    android:layout_gravity="center"
+    android:gravity="center">
 
     <ImageView
         android:id="@+id/icon"
