--- a/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
@@ -10,15 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@color/white"
-        app:tabMode="fixed"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        app:tabMode="fixed" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/notif_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/notif_tab_layout"
-        android:visibility="gone"/>
-
-    <include layout="@layout/view_need_to_login" />
+        android:layout_below="@id/notif_tab_layout" />
 </RelativeLayout>
