--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -7,8 +7,7 @@
     <ScrollView
         android:id="@+id/about"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,12 +31,12 @@
                     android:id="@+id/user_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="7dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:textColor="@color/black_text"
-                    android:layout_marginBottom="7dp"
                     android:textSize="18sp" />
 
                 <LinearLayout
@@ -66,12 +65,12 @@
                     android:id="@+id/user_about"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="7dp"
                     android:layout_marginLeft="43dp"
                     android:layout_marginRight="43dp"
                     android:gravity="center"
                     android:textColor="#616161"
                     android:textSize="13sp"
-                    android:layout_marginBottom="7dp"
                     android:visibility="gone" />
 
                 <LinearLayout
@@ -174,8 +173,7 @@
                         <TextView
                             android:id="@+id/checkin_count"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            />
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
 
                     <ImageView
@@ -356,209 +354,215 @@
 
         </LinearLayout>
     </ScrollView>
+
     <ScrollView
         android:id="@+id/editProfile"
-        android:visibility="gone"
-        android:layout_below="@id/about"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:background="@color/white"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="47dp"
-                android:layout_height="47dp"
-                android:background="@drawable/shape_gray_oval"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/capture_photo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_attach_camera" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginLeft="46dp"
-                android:layout_marginRight="46dp"
-                android:background="@drawable/shape_gray_oval"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/user_chosed_photo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="47dp"
-                android:layout_height="47dp"
-                android:background="@drawable/shape_gray_oval"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/pick_photo_from_gallery"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_attach_gallery" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <ImageView style="@style/DividerStyleFull" />
-
-        <ImageView
-            style="@style/DividerStyleFull"
-            android:layout_marginTop="15dp" />
+        android:layout_below="@id/about"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="70dp"
-                android:orientation="horizontal"
-                android:paddingTop="10dp">
-
-                <ImageView
-                    style="@style/CharacteristicsDiveSpotListIcons"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:src="@drawable/ic_profile_user" />
+                android:layout_height="130dp"
+                android:background="@color/white"
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <RelativeLayout
-                        android:layout_width="match_parent"
+                    android:layout_width="47dp"
+                    android:layout_height="47dp"
+                    android:background="@drawable/shape_gray_oval"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/capture_photo"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/name_title"
-                        style="@style/AddDsCharTitleStyle"
-                        android:layout_height="wrap_content"
-                        android:text="@string/full_name" />
-                        <TextView
-                            android:id="@+id/name_count"
-                            android:textColor="#b2b2b2"
-                            android:layout_alignParentRight="true"
-                            android:paddingRight="10dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </RelativeLayout>
-                    <EditText
-                        android:id="@+id/fullName"
-                        android:layout_marginRight="15dp"
-                        android:maxLength="30"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
-                        android:hint="Full name"
-                        android:text=""
-                        android:textSize="16sp" />
+                        android:src="@drawable/ic_attach_camera" />
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="46dp"
+                    android:layout_marginRight="46dp"
+                    android:background="@drawable/shape_gray_oval"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/user_chosed_photo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="47dp"
+                    android:layout_height="47dp"
+                    android:background="@drawable/shape_gray_oval"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/pick_photo_from_gallery"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_attach_gallery" />
+                </LinearLayout>
             </LinearLayout>
 
-            <ImageView style="@style/DividerStyle" />
+            <ImageView style="@style/DividerStyleFull" />
 
-            <TextView
-                android:id="@+id/error_name"
-                style="@style/ValidationErrorTextView" />
+            <ImageView
+                style="@style/DividerStyleFull"
+                android:layout_marginTop="15dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="70dp"
-                android:orientation="horizontal"
-                android:layout_marginBottom="10dp"
-                android:paddingTop="10dp">
-
-                <ImageView
-                    style="@style/CharacteristicsDiveSpotListIcons"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:src="@drawable/ic_profile_about" />
+                android:background="@color/white"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/about_title"
-                            style="@style/AddDsCharTitleStyle"
-                            android:layout_height="wrap_content"
-                            android:text="@string/about" />
-                        <TextView
-                            android:id="@+id/about_count"
-                            android:textColor="#b2b2b2"
-                            android:layout_alignParentRight="true"
-                            android:paddingRight="10dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </RelativeLayout>
+                    android:minHeight="70dp"
+                    android:orientation="horizontal"
+                    android:paddingTop="10dp">
 
-                    <EditText
-                        android:id="@+id/aboutEdit"
-                        android:layout_marginRight="15dp"
-                        android:maxLength="250"
+                    <ImageView
+                        style="@style/CharacteristicsDiveSpotListIcons"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:src="@drawable/ic_profile_user" />
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
-                        android:hint="About"
-                        android:text=""
-                        android:textSize="16sp" />
+                        android:orientation="vertical">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/name_title"
+                                style="@style/AddDsCharTitleStyle"
+                                android:layout_height="wrap_content"
+                                android:text="@string/full_name" />
+
+                            <TextView
+                                android:id="@+id/name_count"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:paddingRight="10dp"
+                                android:textColor="#b2b2b2" />
+                        </RelativeLayout>
+
+                        <EditText
+                            android:id="@+id/fullName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15dp"
+                            android:background="@android:color/transparent"
+                            android:hint="Full name"
+                            android:maxLength="30"
+                            android:text=""
+                            android:textSize="16sp" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
+                <ImageView style="@style/DividerStyle" />
+
+                <TextView
+                    android:id="@+id/error_name"
+                    style="@style/ValidationErrorTextView" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:minHeight="70dp"
+                    android:orientation="horizontal"
+                    android:paddingTop="10dp">
+
+                    <ImageView
+                        style="@style/CharacteristicsDiveSpotListIcons"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:src="@drawable/ic_profile_about" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/about_title"
+                                style="@style/AddDsCharTitleStyle"
+                                android:layout_height="wrap_content"
+                                android:text="@string/about" />
+
+                            <TextView
+                                android:id="@+id/about_count"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:paddingRight="10dp"
+                                android:textColor="#b2b2b2" />
+                        </RelativeLayout>
+
+                        <EditText
+                            android:id="@+id/aboutEdit"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15dp"
+                            android:background="@android:color/transparent"
+                            android:hint="About"
+                            android:maxLength="250"
+                            android:text=""
+                            android:textSize="16sp" />
+                    </LinearLayout>
+
+                </LinearLayout>
             </LinearLayout>
+
+            <ImageView style="@style/DividerStyleFull" />
+
+            <TextView
+                android:id="@+id/error_about"
+                style="@style/ValidationErrorTextView" />
+
+            <Button
+                android:id="@+id/button_save"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/border_button_orange_2px"
+                android:text="@string/save_changes" />
+
+            <com.rey.material.widget.Button
+                android:id="@+id/cancel_button"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/border_button_white_2px"
+                android:text="@string/cancel"
+                app:rd_backgroundColor="@color/gray"
+                app:rd_rippleType="touch" />
         </LinearLayout>
-
-        <ImageView style="@style/DividerStyleFull" />
-
-        <TextView
-            android:id="@+id/error_about"
-            style="@style/ValidationErrorTextView" />
-
-        <Button
-            android:id="@+id/button_save"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_margin="20dp"
-            android:background="@drawable/border_button_orange_2px"
-            android:text="@string/save_changes" />
-
-        <com.rey.material.widget.Button
-            android:id="@+id/cancel_button"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/border_button_white_2px"
-            android:text="@string/cancel"
-            app:rd_backgroundColor="@color/gray"
-            app:rd_rippleType="touch" />
-    </LinearLayout>
     </ScrollView>
-    <include
-
-        layout="@layout/view_need_to_login"/>
 </RelativeLayout>
