New splash screen layout

--- a/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_photo">
 
-    <com.ddscanner.ui.views.DDProgressBarView
-        android:layout_width="match_parent"
-        android:id="@+id/mask_splash"
-        android:layout_height="match_parent" />
-    <TextView
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Scanning..."
-        android:textColor="@color/white"
-        android:textSize="21sp"
+        android:src="@drawable/splash_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="164dp"/>
+    <TextView
+        android:id="@+id/title"
+        android:layout_below="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
         android:fontFamily="sans-serif-medium"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_marginTop="100dp"/>
-</FrameLayout>
+        android:textSize="26sp"
+        android:textColor="@color/white"
+        android:text="@string/deep_dive_scanner"/>
+    <TextView
+        android:layout_below="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textSize="17sp"
+        android:textColor="#f6f6f6"
+        android:text="Your personal dive guide"/>
+</RelativeLayout>
