--- a/trunk/ddscanner/app/src/main/res/layout/activity_social_login.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_social_login.xml
@@ -4,10 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:background="@color/white">
+    <ImageView
+        android:id="@+id/close"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:scaleType="center"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_m_close"/>
     <RelativeLayout
+        android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.facebook.login.widget.LoginButton
