Checkin/checkout ui

--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -694,6 +694,7 @@
         android:clickable="true"
         android:src="@drawable/ic_acb_pin"
         app:layout_anchor="@id/app_bar_layout"
+        app:backgroundTint="@color/orange"
         app:layout_anchorGravity="bottom|right|end"
         app:layout_collapseMode="pin" />
 
