--- a/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
@@ -12,9 +12,20 @@
         android:background="@color/white"
         android:visibility="visible"
         app:tabMode="fixed" />
-
+    <com.rey.material.widget.ProgressView
+        android:layout_below="@+id/notif_tab_layout"
+        android:id="@+id/progressBarFull"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
+        app:pv_autostart="true"
+        app:pv_circular="true"
+        app:pv_progressMode="indeterminate"
+        app:pv_progressStyle="@style/CircularProgress" />
     <android.support.v4.view.ViewPager
         android:id="@+id/notif_view_pager"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/notif_tab_layout" />
