--- a/trunk/ddscanner/app/src/main/res/layout/fragment_all_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_all_notifications.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <include layout="@layout/view_no_notifications" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/activity_rc"
         android:scrollbars="vertical"
