--- a/trunk/ddscanner/app/src/main/res/layout/activity_foreign_user.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_foreign_user.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -110,6 +111,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/likeLayout"
                         android:layout_width="94dp"
                         android:layout_height="42dp"
                         android:layout_marginLeft="13dp"
@@ -129,6 +131,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/dislikeLayout"
                         android:layout_width="94dp"
                         android:layout_height="42dp"
                         android:background="@drawable/border_gray_100px"
@@ -285,12 +288,13 @@
                         android:src="@drawable/ic_profile_open" />
 
                     <TextView
+                        android:id="@+id/openOn"
                         style="@style/CharacteristicsDiveSpotListTitle"
                         android:layout_width="match_parent"
                         android:textSize="14sp"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
-                        android:text="Open on" />
+                        tools:text="Open on" />
                 </LinearLayout>
 
             </LinearLayout>
