--- a/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
@@ -31,4 +31,9 @@
         android:layout_height="match_parent"
         android:layout_below="@id/notif_tab_layout"
         android:visibility="gone" />
+
+    <com.ddscanner.ui.views.LoginView
+        app:title="@string/notifications_need_to_login"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
