--- a/trunk/ddscanner/app/src/main/res/layout/view_login.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_login.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_view_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@color/white"
     android:gravity="center">
