--- a/trunk/ddscanner/app/src/main/res/layout/activity_slider.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_slider.xml
@@ -19,8 +19,7 @@
                 android:layout_marginTop="11dp"
                 android:layout_marginLeft="15dp"
                 android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:background="@color/white"/>
+                android:layout_height="35dp" />
             <LinearLayout
                 android:layout_marginLeft="15dp"
                 android:layout_width="match_parent"
