--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -151,7 +151,7 @@
                 <LinearLayout
                     android:id="@+id/checkins_activity"
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
+                    android:layout_height="66dp"
                     android:background="?attr/selectableItemBackground"
                     android:orientation="horizontal"
                     android:paddingTop="10dp">
@@ -172,6 +172,7 @@
 
                         <TextView
                             android:id="@+id/checkin_count"
+                            android:layout_marginTop="3dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
@@ -188,7 +189,7 @@
                 <LinearLayout
                     android:id="@+id/created_activity"
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
+                    android:layout_height="66dp"
                     android:background="?attr/selectableItemBackground"
                     android:orientation="horizontal"
                     android:paddingTop="10dp">
@@ -211,8 +212,7 @@
                             android:id="@+id/added_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_below="@+id/depth_title"
-                            android:text="230" />
+                            android:layout_marginTop="3dp" />
                     </LinearLayout>
 
                     <ImageView
@@ -227,7 +227,7 @@
                 <LinearLayout
                     android:id="@+id/edited_activity"
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
+                    android:layout_height="66dp"
                     android:background="?attr/selectableItemBackground"
                     android:orientation="horizontal"
                     android:paddingTop="10dp">
@@ -248,6 +248,7 @@
 
                         <TextView
                             android:id="@+id/edited_count"
+                            android:layout_marginTop="3dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
@@ -264,7 +265,7 @@
                 <LinearLayout
                     android:id="@+id/favorites_activity"
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
+                    android:layout_height="66dp"
                     android:background="?attr/selectableItemBackground"
                     android:orientation="horizontal"
                     android:paddingTop="10dp">
@@ -285,6 +286,7 @@
 
                         <TextView
                             android:id="@+id/favourites_count"
+                            android:layout_marginTop="3dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
