--- a/trunk/ddscanner/app/src/main/res/layout/activity_foreign_user.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_foreign_user.xml
@@ -18,7 +18,7 @@
         app:pv_progressStyle="@style/CircularProgress" />
     <ScrollView
         android:id="@+id/about"
-
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
