--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -234,4 +234,21 @@
         <item name="android:layout_marginRight">9dp</item>
     </style>
 
+    <style name="TermsOfServiceTitleStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textColor">@color/black_text</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">14dp</item>
+    </style>
+
+    <style name="TermsOfServiceTexteStyle">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/black_text</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+
 </resources>
