Some fixing according text in add ds activity

--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
@@ -195,7 +195,7 @@
                         android:paddingRight="20dp"
                         android:layout_height="56dp"
                         style="@style/AddDsCharTitleStyle"
-                        android:hint="From"/>
+                        android:hint="@string/min"/>
                     <EditText
                         android:maxLength="5"
                         android:gravity="center"
@@ -207,7 +207,7 @@
                         android:paddingRight="20dp"
                         android:layout_height="56dp"
                         style="@style/AddDsCharTitleStyle"
-                        android:hint="To"/>
+                        android:hint="@string/max"/>
 
                 </LinearLayout>
 
